2009-04-28  Colin Watson  <cjwatson@debian.org>

	Update intltool handling.

	* telegnome.desktop: Rename to ...
	* telegnome.desktop.in: ... this. Move translations to ...
	* po/fr.po, po/nl.po, po/pt_BR.po: ... here.

	* Makefile.am (EXTRA_DIST): Replace telegnome.desktop with
	telegnome.desktop.in. Add intltool-extract.in, intltool-merge.in, and
	intltool-update.in.
	(DISTCLEANFILES): Add intltool-extract, intltool-merge, and
	intltool-update.
	Use @INTLTOOL_DESKTOP_RULE@.
	* configure.ac: Call IT_PROG_INTLTOOL.

	* po/LINGUAS: Reformat to one language per line. Add pt_BR.
	* po/POTFILES.in: Add telegnome.desktop.in.
	* po/*.po: Update.

	* .gitignore, po/.gitignore: Update.

2009-04-28  Colin Watson  <cjwatson@debian.org>

	* telegnome.desktop: Add Categories field.

2009-04-28  Colin Watson  <cjwatson@debian.org>

	* Makefile.am (EXTRA_DIST): Add MAINTAINERS and telegnome.doap.

2009-04-28  Colin Watson  <cjwatson@debian.org>

	* src/gui.c (new_gui), src/prefs.c (tele_view_update_page): Convert
	from gnome_pixmap_file to gnome_program_locate_file.

2009-04-28  Colin Watson  <cjwatson@debian.org>

	Clean up most uses of deprecated GNOME APIs. There are still a few
	difficult ones left.

	* src/channel.c: Include <glib.h> and <libgnome/libgnome.h> rather
	than <gnome.h>.
	* src/channel.h: Include <glib.h> rather than <gnome.h>.
	* src/gui.c: Include <gdk/gdkkeysyms.h>, <gtk/gtk.h>,
	<libgnome/libgnome.h>, and <libgnomeui/libgnomeui.h> rather than
	<gnome.h>.
	* src/gui.h: Include <gtk/gtk.h> and <libgnomeui/libgnomeui.h>
	rather than <gnome.h>.
	* src/http.c: Remove unnecessary <gnome.h> inclusion.
	* src/main.c: Include <gtk/gtk.h>, <libgnome/libgnome.h>, and
	<libgnomeui/libgnomeui.h> rather than <gnome.h>. Remove unnecessary
	<glib.h> inclusion.
	* src/pixpack.h: Include <gtk/gtk.h> rather than <gtk/gtkwidget.h>.
	Remove unnecessary <gdk/gdk.h> inclusion.
	* src/prefs.c: Include <gtk/gtk.h>, <libgnome/libgnome.h>,
	<libgnomeui/libgnomeui.h>, and "main.h".